2009-10-26 20:10 adburton

	* data/gmameui_prefs.builder, data/Makefile.am, po/POTFILES.in,
	  src/: callbacks.c, gui_prefs.h, gui_prefs_dialog.c,
	  gui_prefs_dialog.h: Migrate to GtkBuilder from libglade

2009-10-26 17:20 adburton

 	* src/: directories.c, filter.c, filters_list.c, game_list.c,
	  game_list.h, gmameui-marshallers.list, gmameui.c, gmameui.h,
	  gui.c, gui_prefs.h, io.c, io.h: Create new GMAMEUIIOHandler
	  GObject, emit signal when catver.ini file is loaded, update
	  filters list with catver entries when the emitted signal is caught

2009-10-25 14:05 adburton

	* configure.ac, NEWS, AUTHORS: Tagged for new release

2009-10-18 17:20 adburton

	* src/game_list.c, src/io.c: Add additional g_return_val_if_fail checks

2009-10-06 20:57 adburton

	* src/gmameui-zip-utils.h: Fix #ifndef call referencing wrong file
	  (Debian Bug 547699)

2009-09-22 20:40 adburton

	* data/options.glade, src/: mame_options.c, mame_options_dialog.c,
	  mame_options_legacy_dialog.c, xmame_options.c: Add support for -keymap
	  and -keymap_file options (SF Bug 2847216)

2009-09-11 20:17 adburton

	* data/directories.builder, data/Makefile.am, po/POTFILES.in,
	  src/directories.c: Migrate Directories dialog to GtkBuilder, add
	  buttons to open homepages for various resource files

2009-09-05 21:15 adburton

	* data/options.glade, src/: callbacks.c, gmameui.c, interface.c,
	  mame-exec.c, mame_options.c, mame_options.h, mame_options_dialog.c,
	  mame_options_dialog.h, mame_options_legacy_dialog.c:
	  Refactor mame_options and mame_options_dialog to be like legacy versions,
	  add support for dynamically finding effect files (SF Feature Request
	  2780394)

2009-09-03 21:23 adburton

	* src/: directories.c, gmameui-rominfo-dlg.c, callbacks.c, mame_options.c:
	  Fix compilation errors, segfaults (SF Bug 2848961)
	* src/game_list.c: Use locale-sensitive function strtod to compare
	  against the gamelist while we use a version with a decimal point
	  (SF Bug 2847787)
