@@ -1,7 +1,7 @@
 gladedir = $(datadir)/gmameui/glade
 glade_DATA =    audit_window.glade \
 		directories.builder \
-		sidebar.glade \
+		sidebar.builder \
 		gmameui_prefs.builder \
 		options.glade \
 		options_legacy.glade \
