@@ -241,7 +241,7 @@
                                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                                 <property name="resize_mode">queue</property>
                                 <child>
-                                  <object class="GtkTreeView" id="samples_path_treeview">
+                                  <object class="GtkTreeView" id="samples_path_tree_view">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -1290,16 +1290,16 @@
   </object>
   <object class="GtkSizeGroup" id="sizegroup1">
     <widgets>
-      <widget name="lbl_mame_execs"/>
-      <widget name="lbl_roms"/>
-      <widget name="lbl_samples"/>
-      <widget name="label5"/>
-      <widget name="label22"/>
-      <widget name="label21"/>
-      <widget name="label20"/>
-      <widget name="label19"/>
-      <widget name="label16"/>
       <widget name="label42"/>
+      <widget name="label16"/>
+      <widget name="label19"/>
+      <widget name="label20"/>
+      <widget name="label21"/>
+      <widget name="label22"/>
+      <widget name="label5"/>
+      <widget name="lbl_samples"/>
+      <widget name="lbl_roms"/>
+      <widget name="lbl_mame_execs"/>
     </widgets>
   </object>
 </interface>
